[package]
name = "IpManagerServer"
version = "0.1.0"
authors = ["zj"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.3"
serde = "1.0.118"
winping = "0.10.1"
serde_yaml = "0.8"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]